--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,7 @@ bech32 = "0.11.0"
 derive_more = { version = "1.0.0-beta.6", features = ["from"] }
 futures = "0.3.30"
 hex = { version = "0.4.3" }
-radix-engine-common = { git = "https://github.com/radixdlt/radixdlt-scrypto.git", features = [
-  "secp256k1_sign_and_validate",
-  "serde",
-] }
+radix-common = { version = "1.2.0", features = ["secp256k1_sign_and_validate", "serde"] }
 radix-gateway-sdk = { git = "https://github.com/borderline-labs/radix-gateway-sdk.git" }
 serde = { version = "1.0.200", features = ["derive"] }
 
