--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,11 @@ bech32 = "0.11.0"
 derive_more = { version = "1.0.0-beta.6", features = ["from"] }
 futures = "0.3.30"
 hex = { version = "0.4.3" }
-radix-common = { version = "1.2.0", features = ["secp256k1_sign_and_validate", "serde"] }
-radix-gateway-sdk = { git = "https://github.com/borderline-labs/radix-gateway-sdk.git" }
+radix-common = { version = "1.2.0", features = [
+  "secp256k1_sign_and_validate",
+  "serde",
+] }
+radix-gateway-sdk = { git = "https://github.com/proven-network/radix-gateway-sdk.git" }
 serde = { version = "1.0.200", features = ["derive"] }
 
 [dev-dependencies]
